load("@rules_cc//cc:defs.bzl", "cc_library")

_clang_copts = [
    # disable all warnings for upstream
    "-w"
]

_msvc_copts = [
    # disable all warnings for upstream
    "/w",
]

_copts = select({
    "@bazel_tools//tools/cpp:msvc": _msvc_copts,
    "@bazel_tools//tools/cpp:clang-cl": _msvc_copts + ["-Xclang " + f for f in _clang_copts],
    "//conditions:default": _clang_copts,
})

cc_library(
    name = "loguru",
    copts = _copts,
    srcs = ["loguru.cpp"],
    hdrs = ["loguru.hpp"],
    defines = ["LOGURU_WITH_STREAMS=1"],
    visibility = ["//visibility:public"],
)
